# FINANCE-ANALYSIS-with-CREWAI

./: README.md
01 - ai_latest_development/: recommendation_report.md  report.md
01 - ai_latest_development/db/: chroma.sqlite3
01 - ai_latest_development/src/ai_latest_development/: crew.py  main.py
01 - ai_latest_development/src/ai_latest_development/config/: agents.yaml  tasks.yaml
01 - ai_latest_development/src/ai_latest_development/tools/: custom_tool.py
crewai_development/: note.txt
crewai_development/research_test/: README.md  pyproject.toml
crewai_development/research_test/src/research_test/: crew.py  main.py
starter_template/: pyproject.toml
