[project]
name = "research_test"
version = "0.1.0"
description = "research_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
research_test = "research_test.main:run"
run_crew = "research_test.main:run"
train = "research_test.main:train"
replay = "research_test.main:replay"
test = "research_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
